--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -143,7 +143,7 @@ jobs:
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-        USER_OBJECT_ID: ${{ secrets.USER_OBJECT_ID }}
+        USER_OBJECT_ID: ${{ secrets.MY_USER_OBJECT_ID }}
         USERNAME: ${{ secrets.DOMAIN_API_USERNAME }}
         TOKEN: ${{ secrets.DOMAIN_API_TOKEN }}
       run: terraform apply --auto-approve
