Added needed envs to destroy workflow file

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,9 +2,9 @@ name: Deploy Infrastructure and Configure AKS
 
 # This workflow will run on pushes to the main branch and manual triggers
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
   workflow_dispatch:
 
 permissions:
@@ -125,6 +125,7 @@ jobs:
           "namecom_token": "$TOKEN"
         }
         EOF
+
         terraform apply --auto-approve
       working-directory: ./terraform
 
@@ -162,6 +163,7 @@ jobs:
           "namecom_token": "$TOKEN"
         }
         EOF
+
         terraform apply --auto-approve
       working-directory: ./terraform
 
