--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -155,9 +155,9 @@ jobs:
 
     - name: Get AKS Credentials
       run: |
-        chmod +x get-aks-cred.sh
-        ./get-aks-cred.sh
-      working-directory: ./terraform/bash_scripts
+        chmod +x bash_scripts/get-aks-cred.sh
+        ./bash_scripts/get-aks-cred.sh
+      working-directory: ./terraform
     
     - name: Set up Kubernetes authentication with Azure CLI
       run: |
