SSL Redirection Check 4

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -183,5 +183,5 @@ jobs:
       env:
         DOMAIN: ${{ secrets.DOMAIN }}
       run: |
-        curl -I http://api.$DOMAIN/time
+        curl -I api.$DOMAIN/time
 
