Network Policy Test 6

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,35 +78,35 @@ jobs:
         ./pre-apply.sh
       working-directory: ./terraform/bash_scripts
 
-    # - name: Initialize and validate Terraform configuration
-    #   env:
-    #     ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-    #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-    #     ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-    #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-    #   run: terraform init && terraform validate
-    #   working-directory: ./terraform
+    - name: Initialize and validate Terraform configuration
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      run: terraform init && terraform validate
+      working-directory: ./terraform
 
-    # - name: Apply Terraform configuration
-    #   env:
-    #     ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-    #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-    #     ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-    #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-    #     USER_OBJECT_ID: ${{ secrets.MY_USER_OBJECT_ID }}
-    #     USERNAME: ${{ secrets.DOMAIN_API_USERNAME }}
-    #     TOKEN: ${{ secrets.DOMAIN_API_TOKEN }}
-    #   run: |
-    #     cat <<EOF > terraform.tfvars.json
-    #     {
-    #       "my_user_object_id": "$USER_OBJECT_ID",
-    #       "namecom_username": "$USERNAME",
-    #       "namecom_token": "$TOKEN"
-    #     }
-    #     EOF
+    - name: Apply Terraform configuration
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        USER_OBJECT_ID: ${{ secrets.MY_USER_OBJECT_ID }}
+        USERNAME: ${{ secrets.DOMAIN_API_USERNAME }}
+        TOKEN: ${{ secrets.DOMAIN_API_TOKEN }}
+      run: |
+        cat <<EOF > terraform.tfvars.json
+        {
+          "my_user_object_id": "$USER_OBJECT_ID",
+          "namecom_username": "$USERNAME",
+          "namecom_token": "$TOKEN"
+        }
+        EOF
 
-    #     terraform apply --auto-approve
-    #   working-directory: ./terraform
+        terraform apply --auto-approve
+      working-directory: ./terraform
 
 # Deploy API to AKS
 
