--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,37 +30,37 @@ jobs:
 
 # Build, test, and push Docker image
 
-    # - name: Set up Docker Buildx
-    #   uses: docker/setup-buildx-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-    # - name: Build time-api Docker image
-    #   run: |
-    #     docker build -t time-api:${{ github.sha }} -t time-api:latest .
+    - name: Build time-api Docker image
+      run: |
+        docker build -t time-api:${{ github.sha }} -t time-api:latest .
 
-    # - name: Test run container
-    #   run: |
-    #     docker run -d -p 5000:5000 --name time-api time-api:${{ github.sha }}
+    - name: Test run container
+      run: |
+        docker run -d -p 5000:5000 --name time-api time-api:${{ github.sha }}
 
-    # - name: Wait for container to start
-    #   run: |
-    #     sleep 5
+    - name: Wait for container to start
+      run: |
+        sleep 5
 
-    # - name: Test Flask app endpoint
-    #   run: |
-    #     curl --fail http://localhost:5000/time || (docker logs time-api && exit 1)
+    - name: Test Flask app endpoint
+      run: |
+        curl --fail http://localhost:5000/time || (docker logs time-api && exit 1)
 
-    # - name: Login to DockerHub
-    #   uses: docker/login-action@v3
-    #   with:
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Login to DockerHub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # - name: Push Docker image
-    #   run: |
-    #     docker tag time-api:${{ github.sha }} victorthegreat7/time-api:${{ github.sha }}
-    #     docker tag time-api:${{ github.sha }} victorthegreat7/time-api:latest
-    #     docker push victorthegreat7/time-api:${{ github.sha }}
-    #     docker push victorthegreat7/time-api:latest
+    - name: Push Docker image
+      run: |
+        docker tag time-api:${{ github.sha }} victorthegreat7/time-api:${{ github.sha }}
+        docker tag time-api:${{ github.sha }} victorthegreat7/time-api:latest
+        docker push victorthegreat7/time-api:${{ github.sha }}
+        docker push victorthegreat7/time-api:latest
 
 # Provision cloud infrastructure
 
@@ -72,41 +72,41 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    # - name: Check for/create Terraform Backend
-    #   run: |
-    #     chmod +x pre-apply.sh
-    #     ./pre-apply.sh
-    #   working-directory: ./terraform/bash_scripts
+    - name: Check for/create Terraform Backend
+      run: |
+        chmod +x pre-apply.sh
+        ./pre-apply.sh
+      working-directory: ./terraform/bash_scripts
 
-    # - name: Initialize and validate Terraform configuration
-    #   env:
-    #     ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-    #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-    #     ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-    #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-    #   run: terraform init && terraform validate
-    #   working-directory: ./terraform
+    - name: Initialize and validate Terraform configuration
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      run: terraform init && terraform validate
+      working-directory: ./terraform
 
-    # - name: Apply Terraform configuration
-    #   env:
-    #     ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-    #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-    #     ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-    #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-    #     USER_OBJECT_ID: ${{ secrets.MY_USER_OBJECT_ID }}
-    #     USERNAME: ${{ secrets.DOMAIN_API_USERNAME }}
-    #     TOKEN: ${{ secrets.DOMAIN_API_TOKEN }}
-    #   run: |
-    #     cat <<EOF > terraform.tfvars.json
-    #     {
-    #       "my_user_object_id": "$USER_OBJECT_ID",
-    #       "namecom_username": "$USERNAME",
-    #       "namecom_token": "$TOKEN"
-    #     }
-    #     EOF
+    - name: Apply Terraform configuration
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        USER_OBJECT_ID: ${{ secrets.MY_USER_OBJECT_ID }}
+        USERNAME: ${{ secrets.DOMAIN_API_USERNAME }}
+        TOKEN: ${{ secrets.DOMAIN_API_TOKEN }}
+      run: |
+        cat <<EOF > terraform.tfvars.json
+        {
+          "my_user_object_id": "$USER_OBJECT_ID",
+          "namecom_username": "$USERNAME",
+          "namecom_token": "$TOKEN"
+        }
+        EOF
 
-    #     terraform apply --auto-approve
-    #   working-directory: ./terraform
+        terraform apply --auto-approve
+      working-directory: ./terraform
 
 # Deploy API to AKS
 
