Created namespace for time API

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -69,6 +69,7 @@ jobs:
       run: |
         chmod +x pre-apply.sh
         ./pre-apply.sh
+        terraform -v
       working-directory: ./terraform/bash_scripts
 
     - name: Initialize and validate Terraform configuration
