--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -147,6 +147,8 @@ jobs:
 
     - name: Get AKS Credentials
       run: |
+        terraform output -raw aks_resource_group | grep -v 'terraform-bin' | grep -v 'Terraform exited with code' | awk -F': ' '{print $2}' | grep -v '^0$'
+        terraform output -raw aks_cluster_name | grep -v 'terraform-bin' | grep -v 'Terraform exited with code' | awk -F': ' '{print $2}' | grep -v '^0$'
         chmod +x bash_scripts/get-aks-cred.sh
         ./bash_scripts/get-aks-cred.sh
       working-directory: ./terraform
