--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -4,12 +4,55 @@ on:
   workflow_dispatch:
 
 jobs:
-  destroy:
+  destroy-cluster:
+    runs-on: self-hosted
+
+    steps:
+
+    # Destroy Terraform AKS Resources
+    - name: Checkout this Github repository
+      uses: actions/checkout@v4
+
+    - name: Login to Microsoft Azure CLI
+      uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
+
+    - name: Initialize and validate Terraform configuration
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      run: terraform init && terraform validate
+      working-directory: ./terraform
+
+    - name: Destory Terraform Resources
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        USER_OBJECT_ID: ${{ secrets.MY_USER_OBJECT_ID }}
+      run: |
+        cat <<EOF > terraform.tfvars.json
+        {
+          "my_user_object_id": "$USER_OBJECT_ID"
+        }
+        EOF
+        
+        terraform apply --auto-approve
+      working-directory: ./terraform
+    
+  destroy-runner-vm:
     runs-on: ubuntu-latest
 
     steps:
 
-    # Destroy Terraform Resources
+    # Destroy Remaining Terraform Resources
     - name: Checkout this Github repository
       uses: actions/checkout@v4
 
@@ -46,3 +89,4 @@ jobs:
         
         terraform destroy --auto-approve
       working-directory: ./terraform
+
