--- a/.github/workflows/subsequent-builds.yaml
+++ b/.github/workflows/subsequent-builds.yaml
@@ -2,14 +2,11 @@ name: Provision Infrastructure and Deploy API
 
 # This workflow will run on pushes to the main branch and manual triggers
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
 
@@ -17,38 +14,10 @@ jobs:
     - name: Checkout current Github repository
       uses: actions/checkout@v4
 
-    # Build, test, and push Docker image
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Build time-api Docker image
+    - name: Move /deploy contents to /terraform
       run: |
-        docker build -t time-api:${{ github.sha }} -t time-api:latest .
-
-    - name: Test run container
-      run: |
-        docker run -d -p 5000:5000 --name time-api time-api:${{ github.sha }}
-
-    - name: Wait for container to start
-      run: |
-        sleep 5
-
-    - name: Test Flask app endpoint
-      run: |
-        curl --fail http://localhost:5000/time || (docker logs time-api && exit 1)
-
-    - name: Login to DockerHub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Push Docker image
-      run: |
-        docker tag time-api:${{ github.sha }} victorthegreat7/time-api:${{ github.sha }}
-        docker tag time-api:${{ github.sha }} victorthegreat7/time-api:latest
-        docker push victorthegreat7/time-api:${{ github.sha }}
-        docker push victorthegreat7/time-api:latest
+        mv deploy/* .
+      working-directory: ./terraform
 
     # Provision cloud infrastructure and deploy microservice to provisioned infrastructure
     - name: Setup Terraform
