Self-Hosted Runner Approach Attempt 1

--- a/.github/workflows/first-build.yaml
+++ b/.github/workflows/first-build.yaml
@@ -4,7 +4,7 @@ name: Provision Infrastructure and Deploy API
 on:
   push:
     branches:
-      - main
+      - self-hosted
   workflow_dispatch:
 
 jobs:
