Self-Hosted Runner Approach Attempt 2

--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -40,7 +40,7 @@ jobs:
       run: |
         cat <<EOF > terraform.tfvars.json
         {
-          "my_user_object_id": "$USER_OBJECT_ID"
+          "my_user_object_id": "$USER_OBJECT_ID",
           "github_runner_token": "$RUNNER_TOKEN"
         }
         EOF
@@ -84,7 +84,7 @@ jobs:
       run: |
         cat <<EOF > terraform.tfvars.json
         {
-          "my_user_object_id": "$USER_OBJECT_ID"
+          "my_user_object_id": "$USER_OBJECT_ID",
           "github_runner_token": "$RUNNER_TOKEN"
         }
         EOF
