--- a/.github/workflows/first-build.yaml
+++ b/.github/workflows/first-build.yaml
@@ -94,7 +94,7 @@ jobs:
       - name: Wait for VM to be ready
         run: |
           echo "Waiting for runner VM to be ready..."
-          sleep 180
+          sleep 300
 
   build:
     needs: provision-runner
@@ -146,7 +146,7 @@ jobs:
       run: |
         cat <<EOF > terraform.tfvars.json
         {
-          "my_user_object_id": "$USER_OBJECT_ID"
+          "my_user_object_id": "$USER_OBJECT_ID",
           "github_runner_token": "$RUNNER_TOKEN"
         }
         EOF
