--- a/.github/workflows/subsequent-builds.yaml
+++ b/.github/workflows/subsequent-builds.yaml
@@ -54,7 +54,7 @@ jobs:
       run: |
         cat <<EOF > terraform.tfvars.json
         {
-          "my_user_object_id": "$USER_OBJECT_ID"
+          "my_user_object_id": "$USER_OBJECT_ID",
           "github_runner_token": "$RUNNER_TOKEN"
         }
         EOF
