--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -44,6 +44,16 @@ jobs:
           "github_runner_token": "$RUNNER_TOKEN"
         }
         EOF
+
+        terraform output -raw aks_resource_group
+        terraform output -raw aks_cluster_name
+
+        chmod +x bash_scripts/get-aks-cred.sh
+        ./bash_scripts/get-aks-cred.sh
+
+        sudo az aks install-cli
+
+        kubelogin convert-kubeconfig -l azurecli
         
         terraform apply --auto-approve
       working-directory: ./terraform
