--- a/.github/workflows/subsequent-builds.yaml
+++ b/.github/workflows/subsequent-builds.yaml
@@ -1,4 +1,4 @@
-name: Provision Infrastructure and Deploy API
+name: Subsequent Builds and Deployments
 
 # This workflow will run on pushes to the main branch and manual triggers
 on:
@@ -58,6 +58,16 @@ jobs:
           "github_runner_token": "$RUNNER_TOKEN"
         }
         EOF
+
+        terraform output -raw aks_resource_group
+        terraform output -raw aks_cluster_name
+
+        chmod +x bash_scripts/get-aks-cred.sh
+        ./bash_scripts/get-aks-cred.sh
+
+        sudo az aks install-cli
+
+        kubelogin convert-kubeconfig -l azurecli
 
         terraform apply --auto-approve
       working-directory: ./terraform
