--- a/.github/workflows/first-build.yaml
+++ b/.github/workflows/first-build.yaml
@@ -152,6 +152,22 @@ jobs:
         EOF
 
         terraform apply --auto-approve
+      working-directory: ./terraform
+
+    - name: Connect to Cluster
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        USER_OBJECT_ID: ${{ secrets.MY_USER_OBJECT_ID }}
+      run: |
+        cat <<EOF > terraform.tfvars.json
+        {
+          "my_user_object_id": "$USER_OBJECT_ID",
+          "github_runner_token": "$RUNNER_TOKEN"
+        }
+        EOF
 
         terraform output -raw aks_resource_group
         terraform output -raw aks_cluster_name
