Self-Hosted Runner Approach Attempt 3

--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -59,6 +59,7 @@ jobs:
       working-directory: ./terraform
     
   destroy-runner-vm:
+    needs: destroy-cluster
     runs-on: ubuntu-latest
 
     steps:
