--- a/.github/workflows/first-build.yaml
+++ b/.github/workflows/first-build.yaml
@@ -154,7 +154,7 @@ jobs:
         terraform apply --auto-approve
       working-directory: ./terraform
 
-    - name: Connect to Cluster
+    - name: Connect to AKS Cluster
       env:
         ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
