--- a/.github/workflows/first-build.yaml
+++ b/.github/workflows/first-build.yaml
@@ -2,6 +2,9 @@ name: Provision Runner VM, Azure Kubernetes Infrastructure and Deploy API
 
 # This workflow will run on pushes to the main branch and manual triggers
 on:
+  push:
+    branches:
+      - self-hosted
   workflow_dispatch:
 
 jobs:
