--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -1,6 +1,9 @@
 name: Destroy Infrastructure
 
 on:
+  push:
+    branches:
+      - self-hosted
   workflow_dispatch:
 
 jobs:
@@ -17,6 +20,31 @@ jobs:
       uses: azure/login@v2
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Connect to AKS Cluster
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        USER_OBJECT_ID: ${{ secrets.MY_USER_OBJECT_ID }}
+      run: |
+        cat <<EOF > terraform.tfvars.json
+        {
+          "my_user_object_id": "$USER_OBJECT_ID",
+          "github_runner_token": "$RUNNER_TOKEN"
+        }
+        EOF
+
+        terraform output -raw aks_resource_group
+        terraform output -raw aks_cluster_name
+
+        chmod +x bash_scripts/get-aks-cred.sh
+        ./bash_scripts/get-aks-cred.sh
+
+        sudo az aks install-cli
+
+        kubelogin convert-kubeconfig -l azurecli
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
