Self-Hosted Runner Approach Attempt 6

--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -45,6 +45,7 @@ jobs:
         sudo az aks install-cli
 
         kubelogin convert-kubeconfig -l azurecli
+      working-directory: ./terraform
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
