--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -77,13 +77,14 @@ jobs:
         terraform output -raw aks_resource_group
         terraform output -raw aks_cluster_name
 
+        az login --service-principal --username "${ARM_CLIENT_ID}" --password "${ARM_CLIENT_SECRET}" --tenant "${ARM_TENANT_ID}"
+
         chmod +x bash_scripts/get-aks-cred.sh
         ./bash_scripts/get-aks-cred.sh
 
         sudo az aks install-cli
 
-        kubelogin convert-kubeconfig -l spn --client-id "$ARM_CLIENT_ID" --client-secret "$ARM_CLIENT_SECRET" --tenant-id "$ARM_TENANT_ID"
-
+        kubelogin convert-kubeconfig -l azurecli
         
         terraform apply --auto-approve
       working-directory: ./terraform
