--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -82,12 +82,11 @@ jobs:
         chmod +x bash_scripts/get-aks-cred.sh
         ./bash_scripts/get-aks-cred.sh
 
+        export KUBECONFIG="$HOME/.kube/config"
+
         sudo az aks install-cli
 
-        kubelogin convert-kubeconfig -l spn \
-        --client-id "${ARM_CLIENT_ID}" \
-        --client-secret "${ARM_CLIENT_SECRET}" \
-        --tenant-id "${ARM_TENANT_ID}"
+        kubelogin convert-kubeconfig -l spn --client-id "${ARM_CLIENT_ID}" --client-secret "${ARM_CLIENT_SECRET}" --tenant-id "${ARM_TENANT_ID}"
 
         
         terraform apply --auto-approve
