--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -82,7 +82,7 @@ jobs:
         chmod +x bash_scripts/get-aks-cred.sh
         ./bash_scripts/get-aks-cred.sh
 
-        export KUBECONFIG="/home/githubrunner/.kube/config
+        export KUBECONFIG="/home/githubrunner/.kube/config"
         echo "KUBECONFIG set to $KUBECONFIG"
 
         sudo az aks install-cli
